--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,8 @@
 .container {
   align-items: center;
   text-align: center;
+  width: 50%;
+  margin: auto;
 }
 
 .container h1 {
@@ -24,6 +26,18 @@
 
 .container p {
   padding: 15px;
+}
+
+.containerquestions {
+  align-items: left;
+  text-align: left;
+  width: 75%;
+  margin: auto;
+}
+
+.questions {
+  font-weight: bold;
+  font-size: xx-large;
 }
 
 .flex-column {
@@ -49,4 +63,17 @@
   color: white;
   padding: 10px 15px;
   border-radius: 10px;
+}
+
+.ansbtn {
+  width: 25%;
+  margin: 10px 0px;
+}
+
+@media screen and (max-width: 768px){
+  .container {
+    min-width: auto;
+  }
+}};
+  
 }
